--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,27 @@
+body {
+  font-family: verdana, sans-serif;
+  text-align: center;
+  background-color: black;
+  color: white;
+}
+
 h1 {
-  color: blue;
+  font-weight: normal;
+  font-size: 50px;
+  }
+
+.cta {
+    color: aquamarine;
+    font-size: 16px
+  }
+
+p {
+  color: gray;
+  font-size: 21px
+}
+
+.footer {
+  text-align: right;
+  opacity: .5;
+  font-size: 12px
 }
